# Axia-Network-axia-scale-codec

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-bot.yml
benches/: benches.rs
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  lib.rs  max_encoded_len.rs  trait_bounds.rs  utils.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
src/: bit_vec.rs  codec.rs  compact.rs  decode_all.rs  depth_limit.rs  encode_append.rs  encode_like.rs  error.rs  generic_array.rs  joiner.rs  keyedvec.rs  lib.rs  max_encoded_len.rs
tests/: chain-error.rs  max_encoded_len.rs  max_encoded_len_ui.rs  mod.rs  scale_codec_ui.rs  single_field_struct_encoding.rs  skip.rs  type_inference.rs  variant_number.rs
tests/max_encoded_len_ui/: crate_str.rs  crate_str.stderr  incomplete_attr.rs  missing_crate_specifier.rs  missing_crate_specifier.stderr  not_encode.rs  not_mel.rs  union.rs  unsupported_variant.rs
tests/max_encoded_len_ui/pass/: codec_crate.rs
tests/scale_codec_ui/pass/: decode-no-implicit-prelude.rs  encode-no-implicit-prelude.rs
